--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Random Chat</title>
+    <title>Ybanat Chat</title>
     <style>
         body { font-family: sans-serif; display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh; background: #f0f2f5; }
         #messages { width: 300px; height: 400px; border: 1px solid #ccc; overflow-y: scroll; background: white; padding: 10px; border-radius: 8px; }
@@ -9,11 +9,11 @@
     </style>
 </head>
 <body>
-    <h2>Random Chat 🎲</h2>
+    <h2>Huyella Chat 🎲</h2>
     <div id="status">Ulanmoqda...</div>
     <div id="messages"></div>
     <div class="input-area">
-        <input type="text" id="msgInput" placeholder="Xabar yozing...">
+        <input type="text" id="msgInput" placeholder="Gap ot">
         <button onclick="sendMessage()">Jo'natish</button>
     </div>
 
@@ -27,7 +27,7 @@
         
         socket.on('chatStart', (data) => {
             statusDiv.innerText = "Siz juftlikka biriktirildingiz!";
-            messagesDiv.innerHTML += `<p><i>Tizim: Suhbat boshlandi!</i></p>`;
+            messagesDiv.innerHTML += `<p><i>Tizim: se..s boshlandi!</i></p>`;
         });
 
         socket.on('message', (msg) => {
